@@ -1,3 +1,5 @@
+ - Q3 maps no longer crash when faces try accessing lightmaps which are not mentioned to be loaded in the file.
+
  - Get particles saved before 1.7.2 (for example in irrEdit) working again (thx to smashly for problem reporting)
  
  - Fix IGUIScrollBar setMax and setMin which had been restricted wrongly (reported by REDDemon)
